# CS2-Reactions

./: .gitignore  LICENSE  README.md  check_image.js  fix_logo.ps1  index.html  package-lock.json  package.json  vite.config.ts
.cursor/: change-log.md
.cursor/rules/: efficiency-tokens.mdc  no-build-unless-asked.mdc  remember-changes.mdc  repo-privacy.mdc  versioning-semver.mdc
scratch/: icon_fix.html
src/: App.tsx  TrayPanel.tsx  eventCatalog.ts  index.css  main.tsx  weaponCatalog.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/presets/: preset-sfx-valorant.CSreact  preset-voice-female-cs16.CSreact
src-tauri/src/: cs2_discovery.rs  gsi_server.rs  lib.rs  profile_manager.rs
src/components/: EventManager.tsx
src/context/: AudioContext.tsx
src/hooks/: useTranslation.ts
